# Discarded

./: commandname.txt  main.py  pyproject.toml
